--- a/public/style.css
+++ b/public/style.css
@@ -105,4 +105,18 @@ h1 span {
   font-weight: 5px;
   border-radius: 5px;
   font-size: 20px;
+  textarea: 50px;
+  word-wrap: break-word;
+}
+
+#hello {
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  font-family: 'Fugaz One';
+  text-align: center;
+  border-radius: 5px;
+  font-size: 16px;
+  width: 150px;
+  position: relative; 
+  right: 50px;
+  word-wrap: break-word;
 }
